--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <DOCTYPE! html>
 
 <html>
+
+<head>
+ <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet"> 
+</head>
  
 <body>
 
