--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html>
 
 <head>
- <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet"> 
+ <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
+ <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 </head>
  
 <body>
