--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
  <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+ <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Spectral+SC">
 </head>
  
 <body>
