--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
  <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Spectral+SC">
+ <link rel="stylesheet" href="static/stylesheet.css">
 </head>
  
 <body>
