--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
  
 <body>
- <img src="static/" alt="Nicolas Bourhis">
+ <img src="static/le-perugin-vierge-a-l-enfant-v-1501.jpg" alt="Nicolas Bourhis">
  <h1>Nicolas Bourhis</h1>
 </body>
 
