--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 <body>
  <img src="static/le-perugin-vierge-a-l-enfant-v-1501.jpg" alt="Nicolas Bourhis">
  <h1>Nicolas Bourhis</h1>
- <p>Ancien étudiant en double licence biologie mathematique (Université Pierre et Marie Curie) 
+ <p>
+  Ancien étudiant en double licence biologie mathematique (Université Pierre et Marie Curie) 
   et titulaire d'un Bacalaureat Scientifique spécialité Mathématique mention très bien.
-  Je propose d'aider et d'accompagner les étudiants Collegiens ou Lycéens dans le domaine des science via des
+  Je propose d'aider et d'accompagner les étudiants Collegiens ou Lycéens dans le domaine des sciences via des
   cours particulier à domicile.
   N'hésiter pas à me contacter !
+ </p>
 </body>
 
 
