--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   N'hésiter pas à me contacter !</p>
  
  <div>
-  <i class="fas fa-envelope"></i>
+  <i class="fas fa-envelope fa-10x"></i>
  </div>
 </body>
 
