--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   N'hésiter pas à me contacter !</p>
  
  <div>
-  <i style="position: absolute" class="fas fa-envelope fa-5x"></i>
+  <i class="fas fa-envelope fa-5x"></i>
  </div>
 </body>
 
