--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
  
  <h1>Nicolas Bourhis</h1>
  
- <p>Ancien étudiant en double licence biologie mathematique (Université Pierre et Marie Curie) 
+ <div class="container">
+  <p>Ancien étudiant en double licence biologie mathematique (Université Pierre et Marie Curie) 
   et titulaire d'un Bacalaureat Scientifique spécialité Mathématique mention très bien.
   Je propose d'aider et d'accompagner les étudiants Collegiens ou Lycéens dans le domaine des sciences via des
   cours particulier à domicile.
   N'hésiter pas à me contacter !</p>
- 
  <div>
   <i class="fas fa-envelope fa-5x"></i>
+ </div>
  </div>
 </body>
 
